remove unnecessary images + footer green on tel hover

--- a/despre.html
+++ b/despre.html
@@ -108,45 +108,40 @@
     <!-- google map -->
 
     <!-- Start About us -->
-    <section id="gp-about-us">
+    <section id="gp-about-us" style="margin-top: -25px">
         <div class="container">
             <div class="row">
                 <div class="col-md-12">
                     <div class="gp-about-us-area">
 
                         <div class="gp-title">
-                            <span class="gp-subtitle">Discover</span>
-                            <h2>ABOUT US</h2>
+                            <h2>Despre noi</h2>
                         </div>
 
                         <div class="row">
-                            <div class="col-md-6">
+                            <div class="col-md-5">
                                 <div class="gp-about-us-left">
-                                    <img src="assets/img/about-us.png" alt="img">
+                                    <img class="bottom" src="assets/img/about-dark.jpg" />
+                                    <img class="top" src="assets/img/about-light.jpg" />
                                 </div>
                             </div>
-                            <div class="col-md-6">
+                            <div class="col-md-7">
                                 <div class="gp-about-us-right">
                                     <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Aliquam minus aliquid,
                                         itaque illum
                                         assumenda repellendus dolorem, dolore numquam totam saepe, porro delectus,
                                         libero enim odio quo.
-                                        Explicabo ex sapiente sit eligendi, facere voluptatum! Quia vero rerum sunt
-                                        porro architecto
-                                        corrupti eaque corporis eum, enim soluta, perferendis dignissimos, repellendus,
-                                        beatae laboriosam.
                                     </p>
-                                    <ul>
-                                        <li>Lorem ipsum dolor sit amet, consectetur adipisicing elit.</li>
-                                        <li>Lorem ipsum dolor sit amet, consectetur adipisicing elit.</li>
-                                        <li>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Quia.</li>
-                                        <li>Lorem ipsum dolor sit amet, consectetur adipisicing elit.</li>
-                                        <li>Lorem ipsum dolor sit amet, consectetur adipisicing elit.</li>
-                                        <li>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Quia.</li>
+                                    <ul style="margin-bottom: 0">
+                                        <li>Lorem ipsum dolor sit amet, consectetur adipisicing elit. A.</li>
+                                        <li>Lorem ipsum dolor sit amet, consectetur adipisicing elit. B.</li>
+                                        <li>Lorem ipsum dolor sit amet, consectetur adipisicing elit. C.</li>
                                     </ul>
-                                    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Atque similique
-                                        molestias est quod
-                                        reprehenderit, quibusdam nam qui, quam magnam.</p>
+                                    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Aliquam minus aliquid,
+                                        itaque illum
+                                        assumenda repellendus dolorem, dolore numquam totam saepe, porro delectus,
+                                        libero enim odio quo.
+                                    </p>
                                 </div>
                             </div>
                         </div>
@@ -172,9 +167,12 @@
                             </div>
                             <div class="col-md-4 column-footer">
                                 <h2 style="font-weight: bold;">Contact</h2>
-                                <p><a href="tel: +40724770007"><span class="fa fa-phone"></span> 0724 77 00 07</a></p>
-                                <p><a href="tel: +40767074848"><span class="fa fa-phone"></span> 0767 07 48 48</a></p>
-                                <p><a href="tel: +40745506699"><span class="fa fa-phone"></span> 0745 50 66 99</a></p>
+                                <p><a href="tel: +40724770007" class="gp-shadow"><span class="fa fa-phone"></span> 0724
+                                        77 00 07</a></p>
+                                <p><a href="tel: +40767074848" class="gp-shadow"><span class="fa fa-phone"></span> 0767
+                                        07 48 48</a></p>
+                                <p><a href="tel: +40745506699" class="gp-shadow"><span class="fa fa-phone"></span> 0745
+                                        50 66 99</a></p>
                                 <p>contact@gardenpizza.ro</p>
                                 <!-- <p><span class="fa fa-envelope-o"></span> contact@gardenpizza.ro</p> -->
                             </div>
