--- a/index.html
+++ b/index.html
@@ -107,7 +107,7 @@
             <div class="gp-top-slider">
 
                 <div class="gp-top-slider-single">
-                    <img src="assets/img/slider/1.jpeg" alt="img">
+                    <img src="assets/img/slider/1.jpg" alt="img">
                     <!-- Top slider content -->
                     <div class="gp-top-slider-content">
                         <span class="gp-slider-small-title">Bun venit!</span>
@@ -118,7 +118,7 @@
                 </div>
 
                 <div class="gp-top-slider-single">
-                    <img src="assets/img/slider/2.jpeg" alt="img">
+                    <img src="assets/img/slider/2.jpg" alt="img">
                     <!-- Top slider content -->
                     <div class="gp-top-slider-content">
                         <span class="gp-slider-small-title">Garden</span>
@@ -129,7 +129,7 @@
                 </div>
 
                 <div class="gp-top-slider-single">
-                    <img src="assets/img/slider/3.jpeg" alt="img">
+                    <img src="assets/img/slider/3.jpg" alt="img">
                     <!-- Top slider content -->
                     <div class="gp-top-slider-content">
                         <span class="gp-slider-small-title">Pizza</span>
@@ -531,97 +531,105 @@
                         </div> -->
 
                         <!-- Start gallery image -->
-                        <div class="gp-gallery-body">
-                            <!-- start single gallery image -->
-                            <div class="gp-single-gallery col-md-4">
-                                <div class="gp-single-gallery-item">
-                                    <figure class="gp-single-gallery-img">
-                                        <a class="gp-imglink" href="assets/img/gallery/1.jpg">
-                                            <img alt="img" src="assets/img/gallery/1.jpg">
-                                            <div class="gp-single-gallery-info">
-                                                <img class="gp-view-btn" src="assets/img/plus.png" alt="plus icon img">
-                                            </div>
-                                        </a>
-                                    </figure>
+                        <div class="gp-gallery-content">
+                            <div class="gp-gallery-body">
+                                <!-- start single gallery image -->
+                                <div class="gp-single-gallery col-md-4">
+                                    <div class="gp-single-gallery-item">
+                                        <figure class="gp-single-gallery-img">
+                                            <a class="gp-imglink" href="assets/img/gallery/1.jpg">
+                                                <img alt="img" src="assets/img/gallery/1.jpg">
+                                                <div class="gp-single-gallery-info">
+                                                    <img class="gp-view-btn" src="assets/img/plus.png"
+                                                        alt="plus icon img">
+                                                </div>
+                                            </a>
+                                        </figure>
+                                    </div>
                                 </div>
-                            </div>
-                            <!-- End single gallery image -->
+                                <!-- End single gallery image -->
 
-                            <!-- start single gallery image -->
-                            <div class="gp-single-gallery col-md-4">
-                                <div class="gp-single-gallery-item">
-                                    <figure class="gp-single-gallery-img">
-                                        <a class="gp-imglink" href="assets/img/gallery/2.jpg">
-                                            <img alt="img" src="assets/img/gallery/2.jpg">
-                                            <div class="gp-single-gallery-info">
-                                                <img class="gp-view-btn" src="assets/img/plus.png" alt="plus icon img">
-                                            </div>
-                                        </a>
-                                    </figure>
+                                <!-- start single gallery image -->
+                                <div class="gp-single-gallery col-md-4">
+                                    <div class="gp-single-gallery-item">
+                                        <figure class="gp-single-gallery-img">
+                                            <a class="gp-imglink" href="assets/img/gallery/2.jpg">
+                                                <img alt="img" src="assets/img/gallery/2.jpg">
+                                                <div class="gp-single-gallery-info">
+                                                    <img class="gp-view-btn" src="assets/img/plus.png"
+                                                        alt="plus icon img">
+                                                </div>
+                                            </a>
+                                        </figure>
+                                    </div>
                                 </div>
-                            </div>
-                            <!-- End single gallery image -->
+                                <!-- End single gallery image -->
 
-                            <!-- start single gallery image -->
-                            <div class="gp-single-gallery col-md-4">
-                                <div class="gp-single-gallery-item">
-                                    <figure class="gp-single-gallery-img">
-                                        <a class="gp-imglink" href="assets/img/gallery/3.jpg">
-                                            <img alt="img" src="assets/img/gallery/3.jpg">
-                                            <div class="gp-single-gallery-info">
-                                                <img class="gp-view-btn" src="assets/img/plus.png" alt="plus icon img">
-                                            </div>
-                                        </a>
-                                    </figure>
+                                <!-- start single gallery image -->
+                                <div class="gp-single-gallery col-md-4">
+                                    <div class="gp-single-gallery-item">
+                                        <figure class="gp-single-gallery-img">
+                                            <a class="gp-imglink" href="assets/img/gallery/3.jpg">
+                                                <img alt="img" src="assets/img/gallery/3.jpg">
+                                                <div class="gp-single-gallery-info">
+                                                    <img class="gp-view-btn" src="assets/img/plus.png"
+                                                        alt="plus icon img">
+                                                </div>
+                                            </a>
+                                        </figure>
+                                    </div>
                                 </div>
-                            </div>
-                            <!-- End single gallery image -->
+                                <!-- End single gallery image -->
 
-                            <!-- start single gallery image -->
-                            <div class="gp-single-gallery col-md-4">
-                                <div class="gp-single-gallery-item">
-                                    <figure class="gp-single-gallery-img">
-                                        <a class="gp-imglink" href="assets/img/gallery/4.jpg">
-                                            <img alt="img" src="assets/img/gallery/4.jpg">
-                                            <div class="gp-single-gallery-info">
-                                                <img class="gp-view-btn" src="assets/img/plus.png" alt="plus icon img">
-                                            </div>
-                                        </a>
-                                    </figure>
+                                <!-- start single gallery image -->
+                                <div class="gp-single-gallery col-md-4">
+                                    <div class="gp-single-gallery-item">
+                                        <figure class="gp-single-gallery-img">
+                                            <a class="gp-imglink" href="assets/img/gallery/4.jpg">
+                                                <img alt="img" src="assets/img/gallery/4.jpg">
+                                                <div class="gp-single-gallery-info">
+                                                    <img class="gp-view-btn" src="assets/img/plus.png"
+                                                        alt="plus icon img">
+                                                </div>
+                                            </a>
+                                        </figure>
+                                    </div>
                                 </div>
-                            </div>
-                            <!-- End single gallery image -->
+                                <!-- End single gallery image -->
 
-                            <!-- start single gallery image -->
-                            <div class="gp-single-gallery col-md-4">
-                                <div class="gp-single-gallery-item">
-                                    <figure class="gp-single-gallery-img">
-                                        <a class="gp-imglink" href="assets/img/gallery/5.jpg">
-                                            <img alt="img" src="assets/img/gallery/5.jpg">
-                                            <div class="gp-single-gallery-info">
-                                                <img class="gp-view-btn" src="assets/img/plus.png" alt="plus icon img">
-                                            </div>
-                                        </a>
-                                    </figure>
+                                <!-- start single gallery image -->
+                                <div class="gp-single-gallery col-md-4">
+                                    <div class="gp-single-gallery-item">
+                                        <figure class="gp-single-gallery-img">
+                                            <a class="gp-imglink" href="assets/img/gallery/5.jpg">
+                                                <img alt="img" src="assets/img/gallery/5.jpg">
+                                                <div class="gp-single-gallery-info">
+                                                    <img class="gp-view-btn" src="assets/img/plus.png"
+                                                        alt="plus icon img">
+                                                </div>
+                                            </a>
+                                        </figure>
+                                    </div>
                                 </div>
-                            </div>
-                            <!-- End single gallery image -->
+                                <!-- End single gallery image -->
 
-                            <!-- start single gallery image -->
-                            <div class="gp-single-gallery col-md-4">
-                                <div class="gp-single-gallery-item">
-                                    <figure class="gp-single-gallery-img">
-                                        <a class="gp-imglink" href="assets/img/gallery/6.jpg">
-                                            <img alt="img" src="assets/img/gallery/6.jpg">
-                                            <div class="gp-single-gallery-info">
-                                                <img class="gp-view-btn" src="assets/img/plus.png" alt="plus icon img">
-                                            </div>
-                                        </a>
-                                    </figure>
+                                <!-- start single gallery image -->
+                                <div class="gp-single-gallery col-md-4">
+                                    <div class="gp-single-gallery-item">
+                                        <figure class="gp-single-gallery-img">
+                                            <a class="gp-imglink" href="assets/img/gallery/6.jpg">
+                                                <img alt="img" src="assets/img/gallery/6.jpg">
+                                                <div class="gp-single-gallery-info">
+                                                    <img class="gp-view-btn" src="assets/img/plus.png"
+                                                        alt="plus icon img">
+                                                </div>
+                                            </a>
+                                        </figure>
+                                    </div>
                                 </div>
-                            </div>
-                            <!-- End single gallery image -->
+                                <!-- End single gallery image -->
 
+                            </div>
                         </div>
 
                     </div>
