change navbar for desert

--- a/despre.html
+++ b/despre.html
@@ -63,6 +63,7 @@
                                     <a href="meniu/piadine.html">Piadine</a>
                                     <a href="meniu/salate.html">Salate</a>
                                     <a href="meniu/paste.html">Paste</a>
+                                    <a href="meniu/desert.html">Desert</a>
                                     <a href="meniu/platouri.html">Platouri</a>
                                 </div>
                             </div>
@@ -83,10 +84,11 @@
                         <li class="navbar-item-md gp-switch"><a href="meniu/piadine.html">Piadine</a></li>
                         <li class="navbar-item-md gp-switch"><a href="meniu/salate.html">Salate</a></li>
                         <li class="navbar-item-md gp-switch"><a href="meniu/paste.html">Paste</a></li>
+                        <li class="navbar-item-md gp-switch"><a href="meniu/desert.html">Desert</a></li>
                         <li class="navbar-item-md gp-switch"><a href="meniu/platouri.html">Platouri</a></li>
-                        <li class="navbar-item-md"><a class="active">Despre</a></li>
                         <li class="navbar-item-md gp-switch" id="mobile-call"><a>Sun&#259;-ne</a></li>
                         <li class="navbar-item-md gp-switch-tel" id="mobile-menu"><a>Meniu</a></li>
+                        <li class="navbar-item-md gp-switch-tel"><a class="active">Despre</a></li>
                         <li class="navbar-item-md gp-switch-tel"><a href="tel: +40724770007">0724 77 00 07</a></li>
                         <li class="navbar-item-md gp-switch-tel"><a href="tel: +40767074848">0767 07 48 48</a></li>
                         <li class="navbar-item-md gp-switch-tel"><a href="tel: +40745506699">0745 50 66 99</a></li>
@@ -108,7 +110,7 @@
     <!-- google map -->
 
     <!-- Start About us -->
-    <section id="gp-about-us" style="margin-top: -25px">
+    <section id="gp-about-us" style="margin-top: -50px">
         <div class="container">
             <div class="row">
                 <div class="col-md-12">
