--- a/index.html
+++ b/index.html
@@ -63,6 +63,7 @@
                                     <a href="meniu/piadine.html">Piadine</a>
                                     <a href="meniu/salate.html">Salate</a>
                                     <a href="meniu/paste.html">Paste</a>
+                                    <a href="meniu/desert.html">Desert</a>
                                     <a href="meniu/platouri.html">Platouri</a>
                                 </div>
                             </div>
@@ -83,15 +84,14 @@
                         <li class="navbar-item-md gp-switch"><a href="meniu/piadine.html">Piadine</a></li>
                         <li class="navbar-item-md gp-switch"><a href="meniu/salate.html">Salate</a></li>
                         <li class="navbar-item-md gp-switch"><a href="meniu/paste.html">Paste</a></li>
+                        <li class="navbar-item-md gp-switch"><a href="meniu/desert.html">Desert</a></li>
                         <li class="navbar-item-md gp-switch"><a href="meniu/platouri.html">Platouri</a></li>
-                        <li class="navbar-item-md"><a href="despre.html">Despre</a></li>
                         <li class="navbar-item-md gp-switch" id="mobile-call"><a>Sun&#259;-ne</a></li>
                         <li class="navbar-item-md gp-switch-tel" id="mobile-menu"><a>Meniu</a></li>
+                        <li class="navbar-item-md gp-switch-tel"><a href="despre.html">Despre</a></li>
                         <li class="navbar-item-md gp-switch-tel"><a href="tel: +40724770007">0724 77 00 07</a></li>
                         <li class="navbar-item-md gp-switch-tel"><a href="tel: +40767074848">0767 07 48 48</a></li>
                         <li class="navbar-item-md gp-switch-tel"><a href="tel: +40745506699">0745 50 66 99</a></li>
-
-                        <!-- <li><a href="#gp-about-us">ABOUT US</a></li> -->
                     </ul>
                 </div>
             </div>
